# ckptmini-tui

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  theme.rs
src/models/: checkpoint.rs  memory.rs  mod.rs  process.rs
src/ui/: app.rs
src/ui/components/: help.rs  mod.rs
src/ui/views/: layout.rs  mod.rs
src/wrapper/: mod.rs  parser.rs  runner.rs
