[package]
name = "ckptmini-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.27"
tokio = { version = "1", features = ["process", "rt-multi-thread"] }
regex = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"

[profile.release]
strip = true
lto = true
